--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       DATABASE_HOST: db
       DASHBOARD_URL_HOST: "http://dashboard.lvh.me:3000"
       SWITCH_HOST: "http://somleng-switch:8080"
+      CALL_SERVICE_DEFAULT_HOST: "http://somleng-switch:8080"
       DB_POOL: 30
       REDIS_URL: redis://redis:6379/0
       ANYCABLE_SECRET: secret
@@ -150,7 +151,9 @@ services:
       retries: 10
 
   somleng-switch:
-    image: ghcr.io/somleng/switch-app
+    build:
+      context: .
+      dockerfile: Dockerfile.switch-patch
     environment:
       AHN_CORE_HOST: freeswitch
       AHN_CORE_HTTP_PORT: 8080
@@ -176,8 +179,8 @@ services:
     environment:
       - FS_DATABASE_HOST=db
       - FS_MOD_JSON_CDR_URL=http://api.somleng.dev:3000/services/call_data_records
-      - FS_EXTERNAL_SIP_IP
-      - FS_EXTERNAL_RTP_IP
+      - FS_EXTERNAL_SIP_IP=5.30.125.25
+      - FS_EXTERNAL_RTP_IP=5.30.125.25
     ports:
       - "5060:5060/udp"
     depends_on:
