--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
       retries: 5
 
   somleng: &somleng
-    image: ghcr.io/somleng/somleng
+    build:
+      context: .
+      dockerfile: Dockerfile.somleng-patch
     environment: &somleng_environment
       RAILS_ENV: development
       DATABASE_HOST: db
