Carrier API extension: SIP Trunks

--- a/Dockerfile.somleng-patch
+++ b/Dockerfile.somleng-patch
@@ -3,4 +3,4 @@ COPY somleng_patches/app/controllers/carrier_api/v1/sip_trunks_controller.rb /ap
 COPY somleng_patches/app/serializers/carrier_api/sip_trunk_serializer.rb /app/app/serializers/carrier_api/sip_trunk_serializer.rb
 COPY somleng_patches/app/request_schemas/carrier_api/sip_trunk_request_schema.rb /app/app/request_schemas/carrier_api/sip_trunk_request_schema.rb
 COPY somleng_patches/app/request_schemas/carrier_api/update_sip_trunk_request_schema.rb /app/app/request_schemas/carrier_api/update_sip_trunk_request_schema.rb
-COPY somleng_patches/config/initializers/sip_trunk_carrier_api_routes.rb /app/config/initializers/sip_trunk_carrier_api_routes.rb
+RUN sed -i '/resources :phone_numbers, only: %i\[index create show update destroy\]/a\        resources :sip_trunks, only: %i[index create show update destroy]' /app/config/routes.rb
