--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,6 +161,12 @@ services:
       AHN_CORE_HTTP_PORT: 8080
       CALL_PLATFORM_HOST: "http://api.somleng.dev:3000"
       REDIS_URL: "redis://redis:6379/1"
+      SIP_GATEWAY_DIR: "/sip_gateways"
+      FS_ESL_HOST: freeswitch
+      FS_ESL_PORT: "8021"
+      FS_ESL_PASSWORD: "secret"
+    volumes:
+      - sip_gateways:/sip_gateways
     depends_on:
       redis:
         condition: service_healthy
@@ -185,6 +191,7 @@ services:
       - FS_EXTERNAL_RTP_IP=3.77.232.33
     volumes:
       - ./nat_gateway.xml:/etc/freeswitch/sip_profiles/nat_gateway.xml
+      - sip_gateways:/etc/freeswitch/sip_profiles/nat_gateway
     ports:
       - "5060:5060/udp"
     depends_on:
@@ -248,3 +255,4 @@ services:
 
 volumes:
   db_data:
+  sip_gateways:
