--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       - db_data:/var/lib/postgresql/data
       - ./docker/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -23,24 +23,25 @@ services:
 
   somleng: &somleng
     build:
-      context: .
-      dockerfile: Dockerfile.somleng-patch
+      context: .build/somleng
     environment: &somleng_environment
-      RAILS_ENV: development
-      DATABASE_HOST: db
-      DASHBOARD_URL_HOST: "http://dashboard.lvh.me:3000"
-      SWITCH_HOST: "http://somleng-switch:8080"
-      CALL_SERVICE_DEFAULT_HOST: "http://somleng-switch:8080"
-      DB_POOL: 30
-      REDIS_URL: redis://redis:6379/0
-      ANYCABLE_SECRET: secret
-      ANYCABLE_BROADCAST_ADAPTER: redisx
-      RATING_ENGINE_HOST: http://rating-engine-api:2080
-      RATING_ENGINE_USERNAME: cgrates
-      RATING_ENGINE_PASSWORD: password
-      STUB_RATING_ENGINE: "false"
+      RAILS_ENV: ${RAILS_ENV:-development}
+      DATABASE_HOST: ${DATABASE_HOST:-db}
+      DATABASE_USERNAME: ${POSTGRES_USER:-postgres}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      DASHBOARD_URL_HOST: ${DASHBOARD_URL_HOST:-http://dashboard.lvh.me:3000}
+      SWITCH_HOST: ${SWITCH_HOST:-http://somleng-switch:8080}
+      CALL_SERVICE_DEFAULT_HOST: ${SWITCH_HOST:-http://somleng-switch:8080}
+      DB_POOL: ${DB_POOL:-30}
+      REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
+      ANYCABLE_SECRET: ${ANYCABLE_SECRET:-secret}
+      ANYCABLE_BROADCAST_ADAPTER: ${ANYCABLE_BROADCAST_ADAPTER:-redisx}
+      RATING_ENGINE_HOST: ${RATING_ENGINE_HOST:-http://rating-engine-api:2080}
+      RATING_ENGINE_USERNAME: ${RATING_ENGINE_USERNAME:-cgrates}
+      RATING_ENGINE_PASSWORD: ${RATING_ENGINE_PASSWORD:-password}
+      STUB_RATING_ENGINE: ${STUB_RATING_ENGINE:-false}
     ports:
-      - "3000:3000"
+      - "${SOMLENG_API_PORT:-3000}:3000"
     depends_on: &somleng_depends_on
       db:
         condition: service_healthy
@@ -51,7 +52,7 @@ services:
     networks:
       default:
         aliases:
-          - api.somleng.dev
+          - ${SOMLENG_API_HOST:-api.somleng.dev}
     healthcheck:
       test:
         [
@@ -71,6 +72,9 @@ services:
     <<: *somleng
     command: bundle exec rails db:setup
     restart: "no"
+    ports: []
+    networks:
+      default: {}
     depends_on:
       db:
         condition: service_healthy
@@ -106,17 +110,17 @@ services:
     ports:
       - "8080:8080"
     environment:
-      REDIS_URL: redis://redis:6379/0
+      REDIS_URL: ${REDIS_URL:-redis://redis:6379/0}
       ANYCABLE_HOST: "0.0.0.0"
       ANYCABLE_PORT: "8080"
       ANYCABLE_DISABLE_TELEMETRY: "true"
       ANYCABLE_RPC_HOST: anycable:50051
-      ANYCABLE_BROADCAST_ADAPTER: redisx
+      ANYCABLE_BROADCAST_ADAPTER: ${ANYCABLE_BROADCAST_ADAPTER:-redisx}
       ANYCABLE_BROKER: memory
       ANYCABLE_PUBSUB: redis
       ANYCABLE_HEADERS: x-device-key
       ANYCABLE_DEBUG: 1
-      ANYCABLE_SECRET: secret
+      ANYCABLE_SECRET: ${ANYCABLE_SECRET:-secret}
       ANYCABLE_HEALTH_PATH: "/health"
       ANYCABLE_LOG_LEVEL: "debug"
       ANYCABLE_LOG_FORMAT: "json"
@@ -126,11 +130,7 @@ services:
       anycable:
         condition: service_healthy
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "wget --server-response --spider --quiet http://0.0.0.0:8080/health 2>&1 | grep '200 OK' > /dev/null",
-        ]
+      test: ["CMD-SHELL", "wget -qO- http://0.0.0.0:8080/health > /dev/null 2>&1"]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -154,19 +154,18 @@ services:
 
   somleng-switch:
     build:
-        context: .
-        dockerfile: Dockerfile.switch-patch
+      context: .build/switch
     environment:
-      AHN_CORE_HOST: freeswitch
+      AHN_CORE_HOST: ${FS_ESL_HOST:-freeswitch}
       AHN_CORE_HTTP_PORT: 8080
-      CALL_PLATFORM_HOST: "http://api.somleng.dev:3000"
-      REDIS_URL: "redis://redis:6379/1"
-      SIP_GATEWAY_DIR: "/sip_gateways"
-      FS_ESL_HOST: freeswitch
-      FS_ESL_PORT: "8021"
-      FS_ESL_PASSWORD: "secret"
+      CALL_PLATFORM_HOST: "http://${SOMLENG_API_HOST:-api.somleng.dev}:${SOMLENG_API_PORT:-3000}"
+      REDIS_URL: ${REDIS_URL_SWITCH:-redis://redis:6379/1}
+      SIP_GATEWAY_DIR: ${SIP_GATEWAY_DIR:-/sip_gateways}
+      FS_ESL_HOST: ${FS_ESL_HOST:-freeswitch}
+      FS_ESL_PORT: ${FS_ESL_PORT:-8021}
+      FS_ESL_PASSWORD: ${FS_ESL_PASSWORD:-secret}
     volumes:
-      - sip_gateways:/sip_gateways
+      - sip_gateways:${SIP_GATEWAY_DIR:-/sip_gateways}
     depends_on:
       redis:
         condition: service_healthy
@@ -183,17 +182,18 @@ services:
       retries: 10
 
   freeswitch:
-    image: ghcr.io/somleng/freeswitch
+    image: ${IMAGE_PREFIX:-localsip}/freeswitch:${TAG:-latest}
     environment:
-      - FS_DATABASE_HOST=db
-      - FS_MOD_JSON_CDR_URL=http://api.somleng.dev:3000/services/call_data_records
-      - FS_EXTERNAL_SIP_IP=3.77.232.33
-      - FS_EXTERNAL_RTP_IP=3.77.232.33
+      - FS_DATABASE_HOST=${FS_DATABASE_HOST:-db}
+      - FS_DATABASE_PASSWORD=${POSTGRES_PASSWORD:-password}
+      - FS_MOD_JSON_CDR_URL=http://${SOMLENG_API_HOST:-api.somleng.dev}:${SOMLENG_API_PORT:-3000}/services/call_data_records
+      - FS_EXTERNAL_SIP_IP=${FS_EXTERNAL_SIP_IP:-127.0.0.1}
+      - FS_EXTERNAL_RTP_IP=${FS_EXTERNAL_RTP_IP:-127.0.0.1}
     volumes:
       - ./nat_gateway.xml:/etc/freeswitch/sip_profiles/nat_gateway.xml
       - sip_gateways:/etc/freeswitch/sip_profiles/nat_gateway
     ports:
-      - "5060:5060/udp"
+      - "${SIP_PORT:-5060}:5060/udp"
     depends_on:
       - db
     healthcheck:
@@ -203,11 +203,11 @@ services:
       retries: 10
 
   sms-gateway:
-    image: ghcr.io/somleng/sms-gateway
+    image: ${IMAGE_PREFIX:-localsip}/sms-gateway:${TAG:-latest}
     ports:
       - "3210:3210"
     environment:
-      - DEVICE_TOKEN=change-me
+      - DEVICE_TOKEN=${DEVICE_TOKEN:-change-me}
     command: somleng-sms-gateway -v -k $DEVICE_TOKEN -d ws://ws:8080 dummy
     depends_on:
       ws:
@@ -225,17 +225,17 @@ services:
       retries: 10
 
   rating-engine-api:
-    image: ghcr.io/somleng/rating-engine:latest-debug
+    image: ${IMAGE_PREFIX:-localsip}/rating-engine:${TAG:-latest}
     depends_on:
       redis:
         condition: service_healthy
       db:
         condition: service_healthy
     environment:
-      STORDB_DBNAME: "cgrates_test"
-      STORDB_USER: "postgres"
-      STORDB_PASSWORD: "password"
-      STORDB_HOST: db
+      STORDB_DBNAME: ${STORDB_DBNAME:-cgrates_test}
+      STORDB_USER: ${POSTGRES_USER:-postgres}
+      STORDB_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      STORDB_HOST: ${DATABASE_HOST:-db}
       STORDB_PORT: 5432
       DATADB_HOST: "redis"
       DATADB_USER: ""
@@ -246,8 +246,8 @@ services:
       HTTP_LISTEN_ADDRESS: "0.0.0.0:2080"
       BOOTSTRAP_DB: "true"
       SERVER_MODE: "api"
-      JSON_RPC_USERNAME: "cgrates"
-      JSON_RPC_PASSWORD: "password"
+      JSON_RPC_USERNAME: ${RATING_ENGINE_USERNAME:-cgrates}
+      JSON_RPC_PASSWORD: ${RATING_ENGINE_PASSWORD:-password}
     expose:
       - "2080/tcp"
     ports:
